<resources>
    <string name="app_name">Mandi Samaj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_women">For Women</string>
    <string name="_1243">₹ 1243</string>
    <string name="kotty_trouser">Kotty-Trouser</string>
    <string name="clothes">Clothes</string>
    <string name="products">Products</string>
    <string name="material">Material : </string>
    <string name="_7600">₹ 7600</string>
    <string name="xl">XL</string>
    <string name="size">Size : </string>
    <string name="best">Best</string>
    <string name="quality">Quality : </string>
    <string name="cotton_100">Cotton 100%</string>
    <string name="kart">kart</string>
    <string name="order_placed">Order Placed</string>
    <string name="your_order_id">Your order #23970320 has been placed successfully</string>
    <string name="ok">OK</string>
    <string name="id">Id</string>
    <string name="date">Date</string>
    <string name="_3869274025">#3869274025</string>
    <string name="_10_01_2023">10-01-2023</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="_7500">₹ 7500</string>
    <string name="upi">UPI</string>
    <string name="barcode">barcode</string>
    <string name="cart">cart</string>
    <string name="verma_moni">\@verma.moni</string>
    <string name="menu">menu</string>
    <string name="settings">settings</string>
    <string name="moni_verma">Moni Verma</string>
    <string name="_78">78</string>
    <string name="_12k">12K</string>
    <string name="_32">32</string>
    <string name="story">Story</string>
    <string name="connections">Connections</string>
    <string name="shopping">Shopping</string>
    <string name="achievements">Achievements</string>
    <string name="you_have_earned">You have earned 15% of achivements</string>
    <string name="orders">Orders</string>
    <string name="posts">Posts</string>
    <string name="tagged">Tagged</string>
    <string name="saved">Saved</string>
    <string name="_23541683">#23541683</string>
    <string name="in_process">In Process</string>
    <string name="delivery_by">Delivery by: 11-01-2023</string>
    <string name="_2">2</string>
    <string name="track">Track</string>
    <string name="delivered">Delivered</string>
    <string name="detail">Detail</string>

    <string name="checkout">Checkout</string>
    <string name="_7000">₹ 7000</string>
    <string name="search">Search</string>
    <string name="_4000">₹ 4000</string>

</resources>