<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:text="@string/_23541683"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/dm_sans_regular"
            android:gravity="end"
            android:text="@string/in_process"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.1"
            android:src="@drawable/ic_inprocess" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:text="@string/delivery_by"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/coat"
            app:shapeAppearance="@style/roundedAccountImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/nike"
            app:shapeAppearance="@style/roundedAccountImageView" />

        <TextView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/account_more_item_border_corner"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:backgroundTint="#2749FF"
            android:text="@string/track" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:text="@string/_23541683"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/dm_sans_regular"
            android:gravity="end"
            android:text="@string/delivered"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.1"
            android:src="@drawable/ic_delivered" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:text="@string/delivery_by"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/walkman"
            app:shapeAppearance="@style/roundedAccountImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/remote"
            app:shapeAppearance="@style/roundedAccountImageView" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:backgroundTint="#1A000000"
            android:fontFamily="@font/dm_sans_regular"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>