<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp">


    <View
        android:id="@+id/view"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/cart_image_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/product_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_margin="4dp"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/kotty_trouser"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:shapeAppearance="@style/roundedCartImageView" />

    <ImageButton
        android:id="@+id/product_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_clear_icon_corner"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/App.TextAppearance.TitleMedium.PlusJakarta"
        android:text="@string/kotty_trouser"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/App.TextAppearance.TitleSmall.PlusJakarta"
        android:text="@string/for_women"
        android:alpha="0.4"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/App.TextAppearance.TitleMedium.Dm.Bold"
        android:text="@string/_4000"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/product_subtitle" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cart_add_button_corner"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/decrease_Button"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_remove_24" />
        <TextView
            android:id="@+id/count"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1" />
        <Button
            android:id="@+id/increase_button"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_add_24" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>